<resources>
    <string name="app_name">GankIO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_main_fragment">Hello main fragment</string>
    <string name="girl">girl</string>
    <string name="image_transition">image_trans_name</string>
    <string name="load_failed">加载失败</string>
    <string name="no_more_data">全部加载完啦！</string>
    <string name="copy_success">复制成功</string>
    <string name="gank_symbol">&#032; &#187;</string>
    <string name="no_permisstion_write">没有写入磁盘权限</string>
    <string name="save_success">保存成功</string>
    <string name="save_err">保存失败</string>

    <string name="fuli">福利</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="video">休息视频</string>
    <string name="front">前端</string>
    <string name="resource">拓展资源</string>
    <string name="app">App</string>
    <string name="about">关于</string>
    <string name="more">瞎推荐</string>
    <string name="all">All</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="introduce_and_help">关于</string>
    <string name="introduce">
        关于我，一个非重点本科学校毕业的计算机专业程序员，毕业一直混基于天子脚下，
        怀揣人生理想，做了『高大上』的程序员。
\n这个项目算是弥补自己欠下的债，刚毕业来北京的时候就计划仿写一个 APP，提升一下自己的比格，
        结果就一直计划计划着。。。随着时间的推移，客户端行业的人才猛增，只干着熟悉的业务，慢慢的舒适区待久了，就颓废了，
        但是市场竞争越来越激烈了。为了不让自己那么狼狈。毅然决定开始自己的计划，希望为时不晚。
\n\n关于 本项目，gank 中，所有接口都来源于：http://gank.io/
\n每天精选妹子图片，一个精选休息视频，若干精选Android。ios。前端等技术干货。
主页的图片来源每日干货接口，获取每天的干货，点击进去才获取某天的干货信息
左侧菜单可以浏览相关领域的技术文章。
点击首页右下角的图标，可以获取到干货闲读的内容。干货平台没有提供相应的接口，是采用解析 html封装成相应的数据结构展示的，目前还不太完善，不过可以使用。
\n通过实现 gank io，对当下比较火的框架如 rxjava ,rxandroid. Refrofit 等开源框架有了进一步理解。
该版本只是实现了基本功能，好多想法还没有加进去，后续会完善 。
感谢开源社区。

</string>

    <string name="my_github">我的Github: https://github.com/zzx410527</string>
    <string name="thanks">特别感谢</string>
    <string name="developers">开发者</string>
    <string name="market">market://details?id=%s</string>
    <string name="about_app">关于Gank</string>
    <string name="version">Version: %s</string>

</resources>
